# sonoff-diy

./: Cargo.toml  LICENSE  README.org  shell.nix
.github/workflows/: on-push.yaml
src/: args.rs  binary.rs  device.rs  device_attr.rs  device_cache.rs  error.rs  httpd.rs  lib.rs  main.rs  netutils.rs  scanner.rs
tests/: httpd_test.rs
