[package]
name = "sonoff-diy"
version = "0.1.0"
authors = ["j-keck <jhyphenkeck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns = "0.3.1"
reqwest = "0.9.22"
log = "0.4.8"
dns-parser = "0.8.0"
serde_json = "1.0.41"
tide = "0.3.0"
http-service = "0.3.1"
env_logger = "0.7.1"
structopt-derive = "0.3.4"
structopt = { version = "0.3.4", features = [ "paw" ] }
paw = "1.0.0"
hmac-sha256 = "0.1.2"
ifaces = { git = "https://github.com/LuoZijun/rust-ifaces.git" }
ipnet = "2.1.0"
snafu = "0.6.0"
serde = "1.0.102"
dirs = "2.0.2"
